syntax = "proto3";

package common;

enum UserRole {
    CUSTOMER = 0;
    MERCHANT = 1;
    SHIPPER = 2;
}

enum OrderStatus {
    PLACED = 0;
    IN_PROGRESS = 1;
    COMPLETED = 2;
}

enum DeliveryStatus {
    ASSIGNED = 0;
    PICKED_UP = 1;
    DELIVERED = 2;
    CANCELLED = 3;
}